MultiEnitity ...rest config...consolidate server.

--- a/main.webgl.html
+++ b/main.webgl.html
@@ -5,7 +5,7 @@
     <script data-main="main.webgl" src="require2.2.0.js"></script>
   </head>
   <body>
-    <canvas id="screen" width="300" height="300">
+    <canvas id="screen" width="auto" height="auto">
     </canvas>
   </body>
 </html>
